--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -129,4 +129,10 @@
   <data name="UserName" xml:space="preserve">
     <value>Uživatelské jméno:</value>
   </data>
+  <data name="Email" xml:space="preserve">
+    <value>E-mail:</value>
+  </data>
+  <data name="PasswordAgain" xml:space="preserve">
+    <value>Heslo znovu:</value>
+  </data>
 </root>
