--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -129,4 +129,10 @@
   <data name="Login" xml:space="preserve">
     <value>Iniciar sesión</value>
   </data>
+  <data name="Email" xml:space="preserve">
+    <value>Correo electrónico:</value>
+  </data>
+  <data name="PasswordAgain" xml:space="preserve">
+    <value>Contraseña de nuevo:</value>
+  </data>
 </root>
