--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -135,4 +135,7 @@
   <data name="PasswordAgain" xml:space="preserve">
     <value>Heslo znova:</value>
   </data>
+  <data name="PasswordMismatch" xml:space="preserve">
+    <value>Heslo a potvrdzovacie heslo sa nezhodujú.</value>
+  </data>
 </root>
