--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -138,4 +138,7 @@
   <data name="PasswordMismatch" xml:space="preserve">
     <value>Heslo a potvrdzovacie heslo sa nezhodujú.</value>
   </data>
+  <data name="Server" xml:space="preserve">
+    <value>Server:</value>
+  </data>
 </root>
