Client Create/Login handling

--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -141,4 +141,7 @@
   <data name="Server" xml:space="preserve">
     <value>Server:</value>
   </data>
+  <data name="UnableToConnect" xml:space="preserve">
+    <value>No se puede conectar al servidor.</value>
+  </data>
 </root>
