--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -141,4 +141,7 @@
   <data name="Server" xml:space="preserve">
     <value>Server:</value>
   </data>
+  <data name="UnableToConnect" xml:space="preserve">
+    <value>Nelze se připojit k serveru.</value>
+  </data>
 </root>
