--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -141,4 +141,7 @@
   <data name="Server" xml:space="preserve">
     <value>Server:</value>
   </data>
+  <data name="UnableToConnect" xml:space="preserve">
+    <value>Unable to connect to server.</value>
+  </data>
 </root>
