--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -144,4 +144,7 @@
   <data name="UnableToConnect" xml:space="preserve">
     <value>Nedá sa pripojiť k serveru.</value>
   </data>
+  <data name="MainMenu" xml:space="preserve">
+    <value>Hlavné menu</value>
+  </data>
 </root>
