--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -144,4 +144,7 @@
   <data name="UnableToConnect" xml:space="preserve">
     <value>Unable to connect to server.</value>
   </data>
+  <data name="MainMenu" xml:space="preserve">
+    <value>Main Menu</value>
+  </data>
 </root>
