--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -147,4 +147,10 @@
   <data name="MainMenu" xml:space="preserve">
     <value>Hlavní menu</value>
   </data>
+  <data name="StartGame" xml:space="preserve">
+    <value>Začít hru</value>
+  </data>
+  <data name="SelectCards" xml:space="preserve">
+    <value>Vyberte karty</value>
+  </data>
 </root>
