--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -147,4 +147,10 @@
   <data name="MainMenu" xml:space="preserve">
     <value>Menú principal</value>
   </data>
+  <data name="StartGame" xml:space="preserve">
+    <value>Empezar juego</value>
+  </data>
+  <data name="SelectCards" xml:space="preserve">
+    <value>Elige cartas</value>
+  </data>
 </root>
