--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -147,4 +147,10 @@
   <data name="MainMenu" xml:space="preserve">
     <value>Hlavné menu</value>
   </data>
+  <data name="StartGame" xml:space="preserve">
+    <value>Začať hru</value>
+  </data>
+  <data name="SelectCards" xml:space="preserve">
+    <value>Vyberte si karty</value>
+  </data>
 </root>
