--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -153,4 +153,10 @@
   <data name="SelectCards" xml:space="preserve">
     <value>Elige cartas</value>
   </data>
+  <data name="Game" xml:space="preserve">
+    <value>Juego</value>
+  </data>
+  <data name="Chat" xml:space="preserve">
+    <value>La charla</value>
+  </data>
 </root>
