--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -153,4 +153,10 @@
   <data name="SelectCards" xml:space="preserve">
     <value>Select Cards</value>
   </data>
+  <data name="Game" xml:space="preserve">
+    <value>Game</value>
+  </data>
+  <data name="Chat" xml:space="preserve">
+    <value>Chat</value>
+  </data>
 </root>
