--- a/Client.Logic/Resources/Texts.resx
+++ b/Client.Logic/Resources/Texts.resx
@@ -112,4 +112,7 @@
   <data name="UnknownError" xml:space="preserve">
     <value>Unknown error occurred</value>
   </data>
+  <data name="PlayerNotFound" xml:space="preserve">
+    <value>Player {0} not found</value>
+  </data>
 </root>
