--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -159,4 +159,19 @@
   <data name="Chat" xml:space="preserve">
     <value>La charla</value>
   </data>
+  <data name="GlobalChat" xml:space="preserve">
+    <value>Chat global</value>
+  </data>
+  <data name="PossibleCommands" xml:space="preserve">
+    <value>Comandos posibles</value>
+  </data>
+  <data name="InvalidCommand" xml:space="preserve">
+    <value>Comando inválido</value>
+  </data>
+  <data name="InvalidSyntax" xml:space="preserve">
+    <value>Sintaxis inválida. Usa {0}</value>
+  </data>
+  <data name="Send" xml:space="preserve">
+    <value>Enviar</value>
+  </data>
 </root>
