--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -159,4 +159,19 @@
   <data name="Chat" xml:space="preserve">
     <value>Chat</value>
   </data>
+  <data name="GlobalChat" xml:space="preserve">
+    <value>Hlavný chat</value>
+  </data>
+  <data name="PossibleCommands" xml:space="preserve">
+    <value>Možné príkazy</value>
+  </data>
+  <data name="InvalidCommand" xml:space="preserve">
+    <value>Neplatný príkaz</value>
+  </data>
+  <data name="InvalidSyntax" xml:space="preserve">
+    <value>Neplatná syntax. Použite: {0}</value>
+  </data>
+  <data name="Send" xml:space="preserve">
+    <value>Odoslať</value>
+  </data>
 </root>
