Handled disconnected packet and minor changes

--- a/Client.Logic/Resources/Texts.cs-CZ.resx
+++ b/Client.Logic/Resources/Texts.cs-CZ.resx
@@ -144,4 +144,7 @@
   <data name="InvalidCardId" xml:space="preserve">
     <value>Server nepodporuje všechny vybrané karty</value>
   </data>
+  <data name="PlayerDisconnected" xml:space="preserve">
+    <value>Hráč {0} byl odpojen</value>
+  </data>
 </root>
