--- a/Client.Logic/Resources/Texts.es-ES.resx
+++ b/Client.Logic/Resources/Texts.es-ES.resx
@@ -144,4 +144,7 @@
   <data name="InvalidCardId" xml:space="preserve">
     <value>El servidor no admite todas las tarjetas que ha seleccionado</value>
   </data>
+  <data name="PlayerDisconnected" xml:space="preserve">
+    <value>El jugador {0} se ha desconectado</value>
+  </data>
 </root>
