--- a/Client.Logic/Resources/Texts.resx
+++ b/Client.Logic/Resources/Texts.resx
@@ -124,4 +124,7 @@
   <data name="InvalidCardId" xml:space="preserve">
     <value>Server does not support every card you've selected</value>
   </data>
+  <data name="PlayerDisconnected" xml:space="preserve">
+    <value>Player {0} has disconnected</value>
+  </data>
 </root>
