--- a/Client.Logic/Resources/Texts.sk-SK.resx
+++ b/Client.Logic/Resources/Texts.sk-SK.resx
@@ -144,4 +144,7 @@
   <data name="InvalidCardId" xml:space="preserve">
     <value>Server nepodporuje všetky vybraté karty</value>
   </data>
+  <data name="PlayerDisconnected" xml:space="preserve">
+    <value>Hráč {0} sa odpojil</value>
+  </data>
 </root>
