--- a/Client.Logic/Resources/Texts.cs-CZ.resx
+++ b/Client.Logic/Resources/Texts.cs-CZ.resx
@@ -147,4 +147,10 @@
   <data name="PlayerDisconnected" xml:space="preserve">
     <value>Hráč {0} byl odpojen</value>
   </data>
+  <data name="WaitingForPlayer" xml:space="preserve">
+    <value>Čekání na připojení dalšího hráče ke hře</value>
+  </data>
+  <data name="PlayerJoinedGame" xml:space="preserve">
+    <value>{0} se připojil ke hře</value>
+  </data>
 </root>
