--- a/Client.Logic/Resources/Texts.es-ES.resx
+++ b/Client.Logic/Resources/Texts.es-ES.resx
@@ -147,4 +147,10 @@
   <data name="PlayerDisconnected" xml:space="preserve">
     <value>El jugador {0} se ha desconectado</value>
   </data>
+  <data name="WaitingForPlayer" xml:space="preserve">
+    <value>Esperando a que otro jugador se una al juego</value>
+  </data>
+  <data name="PlayerJoinedGame" xml:space="preserve">
+    <value>{0} se ha unido al juego</value>
+  </data>
 </root>
