--- a/Client.Logic/Resources/Texts.sk-SK.resx
+++ b/Client.Logic/Resources/Texts.sk-SK.resx
@@ -147,4 +147,10 @@
   <data name="PlayerDisconnected" xml:space="preserve">
     <value>Hráč {0} sa odpojil</value>
   </data>
+  <data name="WaitingForPlayer" xml:space="preserve">
+    <value>Čaká sa na pripojenie ďalšieho hráča</value>
+  </data>
+  <data name="PlayerJoinedGame" xml:space="preserve">
+    <value>{0} sa pripojil k hre</value>
+  </data>
 </root>
