--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -174,4 +174,7 @@
   <data name="Send" xml:space="preserve">
     <value>Odeslat</value>
   </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Odhlásit se</value>
+  </data>
 </root>
