--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -174,4 +174,7 @@
   <data name="Send" xml:space="preserve">
     <value>Send</value>
   </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
 </root>
