--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -151,7 +151,7 @@
     <value>Začít hru</value>
   </data>
   <data name="SelectCards" xml:space="preserve">
-    <value>Vyberte karty</value>
+    <value>Vybrat karty</value>
   </data>
   <data name="Game" xml:space="preserve">
     <value>Hra</value>
