--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -151,7 +151,7 @@
     <value>Začať hru</value>
   </data>
   <data name="SelectCards" xml:space="preserve">
-    <value>Vyberte si karty</value>
+    <value>Vybrať karty</value>
   </data>
   <data name="Game" xml:space="preserve">
     <value>Hra</value>
