--- a/Client.Logic/Resources/Texts.sk-SK.resx
+++ b/Client.Logic/Resources/Texts.sk-SK.resx
@@ -177,4 +177,16 @@
   <data name="AuraExpired" xml:space="preserve">
     <value>Účinnosť kúzla {0} vypršala z {1}</value>
   </data>
+  <data name="Defense" xml:space="preserve">
+    <value>Obrana</value>
+  </data>
+  <data name="Damage" xml:space="preserve">
+    <value>Sila</value>
+  </data>
+  <data name="Health" xml:space="preserve">
+    <value>Zdravie</value>
+  </data>
+  <data name="Mana" xml:space="preserve">
+    <value>Mana</value>
+  </data>
 </root>
