Client: added few toast notifications, added playing game page

--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -177,4 +177,7 @@
   <data name="Logout" xml:space="preserve">
     <value>Logout</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
 </root>
