--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -177,4 +177,7 @@
   <data name="Logout" xml:space="preserve">
     <value>Odhlásiť sa</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Chyba</value>
+  </data>
 </root>
