--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -177,4 +177,7 @@
   <data name="Logout" xml:space="preserve">
     <value>Odhlásit se</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Chyba</value>
+  </data>
 </root>
