Client: handled damage and spell damage packets

--- a/Client.Logic/Resources/Texts.es-ES.resx
+++ b/Client.Logic/Resources/Texts.es-ES.resx
@@ -189,4 +189,7 @@
   <data name="Mana" xml:space="preserve">
     <value>Maná</value>
   </data>
+  <data name="InvalidTarget" xml:space="preserve">
+    <value>No puedes atacar a ese objetivo</value>
+  </data>
 </root>
