--- a/Client.Logic/Resources/Texts.cs-CZ.resx
+++ b/Client.Logic/Resources/Texts.cs-CZ.resx
@@ -189,4 +189,7 @@
   <data name="Mana" xml:space="preserve">
     <value>Mana</value>
   </data>
+  <data name="InvalidTarget" xml:space="preserve">
+    <value>Na tento cíl nemůžete zaútočit</value>
+  </data>
 </root>
