--- a/Client.Logic/Resources/Texts.sk-SK.resx
+++ b/Client.Logic/Resources/Texts.sk-SK.resx
@@ -192,4 +192,13 @@
   <data name="InvalidTarget" xml:space="preserve">
     <value>Na tento cieľ nemôžete zaútočiť</value>
   </data>
+  <data name="CardKilled" xml:space="preserve">
+    <value>{0} zabil {1} s poškodením {2}</value>
+  </data>
+  <data name="CardPeriodicKill" xml:space="preserve">
+    <value>{0} bol zabitý s poškodením {1}</value>
+  </data>
+  <data name="ManaConsume" xml:space="preserve">
+    <value>{0} konzumuje {1} many z {2}</value>
+  </data>
 </root>
