--- a/Client.Logic/Resources/Texts.cs-CZ.resx
+++ b/Client.Logic/Resources/Texts.cs-CZ.resx
@@ -201,4 +201,13 @@
   <data name="ManaConsume" xml:space="preserve">
     <value>{0} spotřebovává {1} many z {2}</value>
   </data>
+  <data name="CantCastSpell" xml:space="preserve">
+    <value>Aktuální karta nemá žádné kouzlo</value>
+  </data>
+  <data name="NotEnoughMana" xml:space="preserve">
+    <value>Aktuální karta nemá dostatek many</value>
+  </data>
+  <data name="InvalidSpellTarget" xml:space="preserve">
+    <value>Aktuální karta nemůže použít kouzlo na tento cíl</value>
+  </data>
 </root>
