--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -189,4 +189,7 @@
   <data name="Defend" xml:space="preserve">
     <value>Defend</value>
   </data>
+  <data name="CombatLog" xml:space="preserve">
+    <value>Combat Log</value>
+  </data>
 </root>
