--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -192,4 +192,19 @@
   <data name="CombatLog" xml:space="preserve">
     <value>Záznam boje</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Nastavení</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>Jazyk:</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Uložit</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Zrušit</value>
+  </data>
+  <data name="SettingsModified" xml:space="preserve">
+    <value>Provedli jste změny v nastavení. Přejete si je uložit?</value>
+  </data>
 </root>
