--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -192,4 +192,19 @@
   <data name="CombatLog" xml:space="preserve">
     <value>Registro de combate</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Ajustes</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>Lengua:</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Salvar</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancelar</value>
+  </data>
+  <data name="SettingsModified" xml:space="preserve">
+    <value>Ha realizado cambios en la configuración. ¿Quieres salvarlos?</value>
+  </data>
 </root>
