--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -192,4 +192,19 @@
   <data name="CombatLog" xml:space="preserve">
     <value>Záznam boja</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Nastavenia</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>Jazyk:</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Uložiť</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Zrušiť</value>
+  </data>
+  <data name="SettingsModified" xml:space="preserve">
+    <value>Vykonali ste zmeny v nastaveniach. Prajete si ich uložiť?</value>
+  </data>
 </root>
