Client: implemented changing password

--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -213,4 +213,10 @@
   <data name="LostGame" xml:space="preserve">
     <value>Prehrali ste.</value>
   </data>
+  <data name="PasswordChange" xml:space="preserve">
+    <value>Zmeniť heslo</value>
+  </data>
+  <data name="PasswordCurrent" xml:space="preserve">
+    <value>Aktuálne heslo:</value>
+  </data>
 </root>
