--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -213,4 +213,10 @@
   <data name="LostGame" xml:space="preserve">
     <value>Prohrál jste.</value>
   </data>
+  <data name="PasswordChange" xml:space="preserve">
+    <value>Změnit heslo</value>
+  </data>
+  <data name="PasswordCurrent" xml:space="preserve">
+    <value>Aktuální heslo:</value>
+  </data>
 </root>
