--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -213,4 +213,10 @@
   <data name="LostGame" xml:space="preserve">
     <value>Usted ha perdido.</value>
   </data>
+  <data name="PasswordChange" xml:space="preserve">
+    <value>Cambia la contraseña</value>
+  </data>
+  <data name="PasswordCurrent" xml:space="preserve">
+    <value>Contraseña actual:</value>
+  </data>
 </root>
