--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -213,4 +213,10 @@
   <data name="LostGame" xml:space="preserve">
     <value>You have lost.</value>
   </data>
+  <data name="PasswordChange" xml:space="preserve">
+    <value>Change password</value>
+  </data>
+  <data name="PasswordCurrent" xml:space="preserve">
+    <value>Current Password:</value>
+  </data>
 </root>
