Client: added placeholder music for main menu with required settings

--- a/Client.UI/Resources/Texts.es-ES.resx
+++ b/Client.UI/Resources/Texts.es-ES.resx
@@ -219,4 +219,7 @@
   <data name="PasswordCurrent" xml:space="preserve">
     <value>Contraseña actual:</value>
   </data>
+  <data name="Music" xml:space="preserve">
+    <value>Música:</value>
+  </data>
 </root>
