--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -219,4 +219,7 @@
   <data name="PasswordCurrent" xml:space="preserve">
     <value>Aktuálne heslo:</value>
   </data>
+  <data name="Music" xml:space="preserve">
+    <value>Hudba:</value>
+  </data>
 </root>
