--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -219,4 +219,7 @@
   <data name="PasswordCurrent" xml:space="preserve">
     <value>Aktuální heslo:</value>
   </data>
+  <data name="Music" xml:space="preserve">
+    <value>Hudba:</value>
+  </data>
 </root>
