--- a/Client.Logic/Resources/Texts.sk-SK.resx
+++ b/Client.Logic/Resources/Texts.sk-SK.resx
@@ -210,4 +210,13 @@
   <data name="InvalidSpellTarget" xml:space="preserve">
     <value>Aktuálna karta nemôže používať kúzlo na tento cieľ</value>
   </data>
+  <data name="CardSwapFailed" xml:space="preserve">
+    <value>Zámena kariet zlyhala</value>
+  </data>
+  <data name="CardSwapFailedInfo" xml:space="preserve">
+    <value>Zámena karty {0} s {1} zlyhala</value>
+  </data>
+  <data name="CardSwap" xml:space="preserve">
+    <value>Karta {0} bola zamenená s {1}</value>
+  </data>
 </root>
