--- a/Client.UI/Resources/Texts.resx
+++ b/Client.UI/Resources/Texts.resx
@@ -222,4 +222,7 @@
   <data name="Music" xml:space="preserve">
     <value>Music:</value>
   </data>
+  <data name="Achievements" xml:space="preserve">
+    <value>Achievements</value>
+  </data>
 </root>
